# VIO-Course

./: .gitignore  README.md
01_update_rotation/: CMakeLists.txt  update_rotation.cpp
02_vio_data_simulation/bin_hw2/: cam_pose.txt  imu_int_pose_noise.txt  imu_int_pose_uler.txt  imu_pose_noise.txt
02_vio_data_simulation/bin_uler/: cam_pose.txt  imu_int_pose_noise.txt  imu_pose_noise.txt
02_vio_data_simulation/main/: gener_alldata.cpp
02_vio_data_simulation/python_tool/: draw_points.py  draw_trajcory.py
02_vio_data_simulation/src/: imu.cpp  utilities.cpp  utilities.h
03_non-linear_ optimization/CurveFitting_LM/: .gitignore  readme.md
03_non-linear_ optimization/CurveFitting_LM/backend/: CMakeLists.txt  edge.cc  edge.h  problem.cc  problem.h
04_nullspace_test/: hessian_nullspace_test.cpp
05_BA_schur/: CMakeLists.txt
05_BA_schur/app/: TestMonoBA.cpp
05_BA_schur/backend/: edge.cc  edge.h  edge_imu.cc  edge_imu.h  edge_prior.cpp  edge_prior.h  edge_reprojection.cc  edge_reprojection.h  imu_integration.h  problem.cc  problem.h  vertex.cc  vertex.h  vertex_inverse_depth.h  vertex_motion.h  vertex_point_xyz.h  vertex_pose.cc  vertex_pose.h
05_BA_schur/frontend/: CMakeLists.txt  camera.h  feature.h  frame.h  map_point.h
06_vision_front_end/: triangulate.cpp
07_vins_simp+simulation/: CMakeLists.txt
07_vins_simp+simulation/config/: euroc_config.yaml  imu_pose_noise_CH8.txt
07_vins_simp+simulation/include/: System.h
07_vins_simp+simulation/src/: System.cpp  estimator.cpp  feature_tracker.cpp
07_vins_simp+simulation/test/: run_euroc.cpp
(+6 files in other folders)
